// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Conference reducer getLocaleNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`Conference reducer getLocaleNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 2`] = `"getLocaleApi"`;

exports[`Conference reducer getLocaleNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 3`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "payload": Object {
          "error": "some error",
        },
        "type": "GET_LOCALE_FAILED",
      },
      "channel": null,
    },
  },
}
`;

exports[`Conference reducer getLocaleNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Conference reducer getLocaleNonBlockSaga on success should return 2 expected yields. 3 yield should be in state Done 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`Conference reducer getLocaleNonBlockSaga on success should return 2 expected yields. 3 yield should be in state Done 2`] = `"getLocaleApi"`;

exports[`Conference reducer getLocaleNonBlockSaga on success should return 2 expected yields. 3 yield should be in state Done 3`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "payload": Object {
          "locale": "RU",
        },
        "type": "GET_LOCALE_SUCCESS",
      },
      "channel": null,
    },
  },
}
`;

exports[`Conference reducer getLocaleNonBlockSaga on success should return 2 expected yields. 3 yield should be in state Done 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Conference reducer getLocaleSaga should be in loop and return expected values 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "TAKE": Object {
      "pattern": "GET_LOCALE",
    },
  },
}
`;

exports[`Conference reducer getLocaleSaga should be in loop and return expected values 2`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "FORK": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`Conference reducer getLocaleSaga should be in loop and return expected values 3`] = `"getLocaleNonBlockSaga"`;

exports[`Conference reducer getLocaleSaga should be in loop and return expected values 4`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "TAKE": Object {
      "pattern": "GET_LOCALE",
    },
  },
}
`;

exports[`Conference reducer layoutSaga should return 1 yield with 1 saga. 2d yield should be in state Done 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      GeneratorFunctionPrototype {
        "_invoke": [Function],
      },
    ],
  },
}
`;
